--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -538,6 +538,11 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+
+.about .content h3 {
+    padding-top: 50px;
+}
+
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
@@ -565,8 +570,8 @@ section {
 /*--------------------------------------------------------------
 # Why Us
 --------------------------------------------------------------*/
-.why-us {
-  padding-top: 10px;
+.rules {
+  padding-top: 100px;
 }
 
 .why-us .box {
